@@ -4,6 +4,10 @@ this repository contains the full copyright notices and license terms. -->
 <form string="Statement Line">
     <label name="statement"/>
     <field name="statement" colspan="3"/>
+    <label name="number"/>
+    <field name="number"/>
+    <label name="sequence"/>
+    <field name="sequence"/>
     <label name="date"/>
     <field name="date"/>
     <label name="amount"/>
