@@ -1,7 +1,8 @@
 <?xml version="1.0"?>
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<tree string="Statement Lines" editable="bottom">
+<tree string="Statement Lines" editable="bottom" sequence="sequence">
+    <field name="number"/>
     <field name="date"/>
     <field name="amount" sum="Amount"/>
     <field name="party"/>
