@@ -1,3 +1,4 @@
+* Add number and sequence on statement line
 * Switch journal debit/credit account usage
 
 Version 3.2.0 - 2014-04-21
